<!-- @author Matias Hätönen -->
<resources>
    <string name="app_name">JustEatIt</string>
    <string name="foodBar">\[Insert food]</string>
    <string name="sendButton">SEND</string>
    <string name="caloriesCount">0</string>
    <string name="caloriesCounter">0</string>
    <string name="caloriesTodayText">Calories Today</string>
    <string name="caloriesTotalText">Calories Total</string>
    <string name="caloriesAverageText">Calories Average</string>
    <string name="insertCalories">0</string>
    <string name="empty">\\</string>
    <string name="resetDailyValues">Reset Daily Values</string>
    <string name="steps">Daily steps</string>
    <string name="stepCounter">0</string>
    <string name="totalSteps">Total steps</string>
    <string name="back">Back</string>
    <string name="caloriesText">Calories:</string>
    <string name="foodItemText">Food Item</string>
    <string name="timeStampText">Time of consumption</string>

</resources>
