<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/sendButton"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/buttonBackground"
        android:onClick="sendButtonPressed"
        android:text="@string/sendButton"
        android:textColor="@color/textColor"
        app:layout_constraintBaseline_toBaselineOf="@+id/foodBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/caloriesTodayCount"
        android:layout_width="97dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/caloriesCount"
        android:textColor="@color/whiteText"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/calories"
        app:layout_constraintStart_toEndOf="@+id/calories" />

    <EditText
        android:id="@+id/foodBar"
        android:layout_width="185dp"
        android:layout_height="53dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="56dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/foodBar"
        android:textColor="@color/whiteText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendButton"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="164dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/caloriesTodayText"
        android:textColor="@color/whiteText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insertCalories"
        android:layout_width="84dp"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/insertCalories"
        android:textColor="@color/whiteText"
        app:layout_constraintBaseline_toBaselineOf="@+id/foodBar"
        app:layout_constraintEnd_toStartOf="@+id/sendButton"
        app:layout_constraintStart_toEndOf="@+id/foodBar" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="76dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/profile_picture"
        android:onClick="profileButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetDailyCalories"
        android:layout_width="85dp"
        android:layout_height="26dp"
        android:background="@color/buttonBackground"
        android:onClick="resetDailiesButtonPressed"
        android:text="@string/resetDailyValues"
        android:textColor="@color/textColor"
        android:textSize="6sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/steps"
        android:textColor="@color/whiteText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/dailystepcounter"
        android:layout_width="99dp"
        android:layout_height="25dp"
        android:layout_marginTop="100dp"
        android:text="@string/stepCounter"
        android:textColor="@color/whiteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toEndOf="@+id/steps"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>